--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         </div>
         <div class="box4">
             <h3>Last step</h3>
-            <p>Through our partnership with sponsors, Ruxy is able to provide players with free Robux by completing simple tasks.</p>
+            <p>Through our partnership with sponsors, Duxy is able to provide players with free Robux by completing simple tasks.</p>
             <button class="complete-task-button" onclick="_xA()">Join Group</button>
         </div>
     </div>
