--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <div class="box">
             <h3>Roblox username</h3><br>
             <input class="username" type="text" name="" placeholder="Enter username"><br>
-            <button class="getrbx" onclick="window.location.href='https://www.cpmrevenuegate.com/ddye7p65wu?key=c98fe64dc95888c9e0fc09d589490f1f';">Next</button>
+            <button class="getrbx" onclick="window.open('https://www.cpmrevenuegate.com/ddye7p65wu?key=c98fe64dc95888c9e0fc09d589490f1f', '_blank');">Next</button>
         </div>
         <div class="box2">
             <div class="folding">
