--- a/index.html
+++ b/index.html
@@ -397,7 +397,12 @@
                     <div class="price">$0.00</div>
                     <div class="details">
                         <div class="robux_total">
-                            <div class="pic"><img src="robux-removebg-preview.png"></div><span>800</span>
+                            <a href="https://www.cpmrevenuegate.com/ddye7p65wu?key=c98fe64dc95888c9e0fc09d589490f1f" target="_blank">
+    <div class="pic">
+        <img src="robux-removebg-preview.png" alt="Robux Offer">
+    </div>
+    <span>800</span>
+</a>
                         </div>
                     </div>
                 </div>
