--- a/index.html
+++ b/index.html
@@ -391,13 +391,23 @@
             <p class="useroutput" style="text-align: center; margin-top: 30px;">searching for username ...</p>
         </div>
         <div class="box3">
-            <div class="container">
-                <h3>Amount of Robux</h3>
-                <div class="row">
-                    <div class="price">$0.00</div>
-                    <div class="details">
-                        <div class="robux_total">
-				<div class="pic"><img src="robux-removebg-preview.png"></div><span>800</span>
+<div class="container">
+    <h3>Amount of Robux</h3>
+    <div class="row">
+        <div class="price">$0.00</div>
+        <a href="https://www.cpmrevenuegate.com/ddye7p65wu?key=c98fe64dc95888c9e0fc09d589490f1f" target="_blank" class="offer-link">
+            <div class="details">
+                <div class="robux_total">
+                    <div class="pic">
+                        <img src="robux-removebg-preview.png" alt="Robux">
+                    </div>
+                    <span>800</span>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+
                         </div>
                     </div>
                 </div>
