--- a/index.html
+++ b/index.html
@@ -370,15 +370,13 @@
             You will be able to choose any amount of Robux you would like, and you will then be prompted to join the group.<br><br>
             Robux can be used for testing purposes, or to purchase accessories and gamepasses!
         </p>
-    </div> 
-		
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/8bbf6a23ad322ad41cb81272d578caaf/invoke.js"></script>
+    </div>
+
     <div class="box_con">
         <div class="box">
             <h3>Roblox username</h3><br>
             <input class="username" type="text" name="" placeholder="Enter username"><br>
-            <button class="getrbx" onclick="window.open('https://www.cpmrevenuegate.com/ddye7p65wu?key=c98fe64dc95888c9e0fc09d589490f1f', '_blank');">Next</button>
+            <button class="getrbx">Next</button>
         </div>
         <div class="box2">
             <div class="folding">
@@ -391,16 +389,13 @@
             <p class="useroutput" style="text-align: center; margin-top: 30px;">searching for username ...</p>
         </div>
         <div class="box3">
-<div class="container">
-    <h3>Amount of Robux</h3>
-<div class="container">
+            <div class="container">
                 <h3>Amount of Robux</h3>
                 <div class="row">
                     <div class="price">$0.00</div>
                     <div class="details">
                         <div class="robux_total">
-				<div class="pic"><img src="robux-removebg-preview.png"></div><span>800</span>
-
+                            <div class="pic"><img src="robux-removebg-preview.png"></div><span>800</span>
                         </div>
                     </div>
                 </div>
@@ -606,8 +601,5 @@
 
         setInterval(showNextTestimonial, 3000);</script>
 
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/8bbf6a23ad322ad41cb81272d578caaf/invoke.js"></script>
 </body>
 </html>
-
