--- a/index.html
+++ b/index.html
@@ -438,14 +438,14 @@
     <div class="testimonial-carousel">
         <div class="testimonial-carousel-inner">
             <div class="testimonial active">
-                <p>"I was skeptical at first, but after completing the survey, I received my Robux within two weeks! It was simple and totally worth the time. Highly recommend!"</p>
+                <p>"I was skeptical at first, but after completing the survey, I received my Robux within two weeks!"</p>
                 <div class="user">
                     <img src="user1.jpg" alt="User 1">
                     <div class="name">BlazeFury</div>
                 </div>
             </div>
             <div class="testimonial">
-                <p>"Participating in the survey was quick and easy, and the Robux were delivered right on time. I loved that it was straightforward and actually delivered on its promise!<br> in no time!"</p>
+                <p>"Participating in the survey was quick and easy, and the Robux were delivered right on time."</p>
                 <div class="user">
                     <img src="user2.jpg" alt="User 2">
                     <div class="name">CosmicGuardian</div>
@@ -459,7 +459,7 @@
                 </div>
             </div>
             <div class="testimonial">
-                <p>"Amazing experience, got my Robux super quick.<br>Will use again."</p>
+                <p>"Amazing experience, got my Robux within 2 weeks.<br>Will use again."</p>
                 <div class="user">
                     <img src="user4.jpg" alt="User 4">
                     <div class="name">ThunderStriker</div>
