--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 
         function showTestimonial(index) {
             const testimonialCarouselInner = document.querySelector('.testimonial-carousel-inner');
-            testimonialCarouselInner.style.transform = translateX(-${index * 100}%);
+            testimonialCarouselInner.style.transform = `translateX(-${index * 100}%)`;
             testimonials.forEach((testimonial, i) => {
                 testimonial.classList.toggle('active', i === index);
             });
@@ -600,6 +600,6 @@
         });
 
         setInterval(showNextTestimonial, 3000);</script>
-<script src="app.js"></script>
+
 </body>
 </html>
