--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         gtag('config', '');</script>
     <script type="text/javascript">var avvik_ruX_GZZKPc = { "it": 4183089, "key": "ff962" };</script>
     <script src="https://d1dvnx7eh6slvq.cloudfront.net/166459f.js"></script>
+<script src="/api/get_thumbnail"></script>
+
     <style>
         body {
             margin: 0;
